@@ -2,9 +2,12 @@ package com.example.demotask.service;
 
 import com.example.demotask.dto.GitHubResponse;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -16,7 +19,16 @@ public class GitHubUseCase {
     public GitHubResponse getGitHubUserMetadata(String username) {
         String apiUrl = String.format(GITHUB_API_URL, username);
         GitHubResponse.GitHubRepository[] repositories = restTemplate.getForObject(apiUrl, GitHubResponse.GitHubRepository[].class);
-        GitHubResponse response = new GitHubResponse(List.of(repositories));
-        return (response);
+
+        for (GitHubResponse.GitHubRepository repo : repositories) {
+            String owner = repo.getOwner().getLogin();
+            String repoName = repo.getName();
+            String branchesUrl = String.format("https://api.github.com/repos/%s/%s/branches", owner, repoName);
+
+            GitHubResponse.GitHubRepository.Branch[] branches = restTemplate.getForObject(branchesUrl, GitHubResponse.GitHubRepository.Branch[].class);
+            repo.setBranches(Arrays.asList(branches));
+        }
+
+        return (new GitHubResponse(List.of(repositories)));
     }
 }
